[package]
name = "brockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
bitcoin_hashes = "0.10.0"
libsecp256k1 = "0.6.0"
secp256k1 = {version = "0.20.3", features = ["rand-std", "recovery"] }
